testing text size again

--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 1.5vw;
 }
   
 /* Change background on mouse-over */
