--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 1.5vw;
+    font-size: 1.5em;
 }
   
 /* Change background on mouse-over */
