--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
     display: block;
     color: #FFEFCB;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0.5em 0.5em;
     text-decoration: none;
     font-size: 1em;
 }
