--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 3; 
 }
   
   /* Links inside the navbar */
@@ -104,3 +105,19 @@ h2 {
     transform: skewY(var(--skew-angle));
   }
   
+
+  .container {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+   }
+   
+   img {
+     max-width: 100%;
+     max-height:100%;
+   }
+   
+   .text {
+     font-size: 70px;
+   }
