--- a/index.css
+++ b/index.css
@@ -106,19 +106,19 @@ section {
   transform: skewY(var(--skew-angle));
 }
 
-
-.container {
-  display: grid;
-  align-items: center; 
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 5px;
-  }
+.image_text_container {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
 
 img {
   max-width: 100%;
-  max-height:100%;
+  max-height: 100%;
 }
 
-.text {
-  font-size: 70px;
+.text_horizontal {
+  font-size: 20px;
+  padding-left: 20px;
+  max-width:500px;
 }
