--- a/index.css
+++ b/index.css
@@ -75,10 +75,6 @@ h2 {
   text-align: center;
 }
 
-.section-title {
-  font-size: 2.25rem;
-}
-
 section {
   padding-block: 5rem;
 }
@@ -122,3 +118,35 @@ img {
   padding-left: 20px;
   max-width:500px;
 }
+
+.section-title {
+  width: 300px;
+  height: 40px;
+  position: relative;
+  background: #690003;
+  color: #FFEFCB;
+  font-size: 2.25rem;
+}
+.section-title:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  border-left: 20px solid white;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+}
+.section-title:before {
+  content: "";
+  position: absolute;
+  right: -20px;
+  bottom: 0;
+  width: 0;
+  height: 0;
+  border-left: 20px solid #690003;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+}
+  
