--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 /* The navigation bar */
 .navbar {
   overflow: hidden;
-  background-color: #690003;
+  background-color: #8f3639;
   position: fixed;
   top: 0;
   width: 100%;
@@ -22,7 +22,7 @@
   
 /* Change background on mouse-over */
 .navbar a:hover {
-  background: #520003;
+  background: #b74d51;
   color: #FFEFCB;
   font-weight: bold;
 }
@@ -44,6 +44,7 @@ a:active {
 body {
   background-color: #FFEFCB;
   margin: 0;
+
 }
 
 p {
@@ -53,6 +54,7 @@ p {
   padding-left: 5%;
   max-width:1300px;
   word-wrap:normal;
+  margin-left: 1em;
 }
 
 h1 {
@@ -60,12 +62,13 @@ h1 {
   text-indent: 20px;
   font-size: 35px;
   color: #604230;
+  margin-left: 1em;
 }
 
 h2 {
-    padding-left: 5%;
     text-indent: 20px;
     color: #604230;
+    margin-left: 1em;
 }
 
 
@@ -82,12 +85,7 @@ section {
 .diagonal {
   z-index: -4; 
   --skew-angle: -5deg;
-  --background: linear-gradient(
-                  45deg, 
-                  #FFEFCB, 
-                  #CBA591, 
-                  #CBA591
-                );
+  --background: linear-gradient( 45deg, #FFEFCB, #CBA591,#CBA591);
 
   position: relative;
   isolation: isolate;
@@ -111,6 +109,19 @@ section {
 img {
   max-width: 100%;
   max-height: 100%;
+  width: 15em;
+  height: 15em;
+
+}
+
+.image_horizontal img {
+  max-width: 100%;
+  max-height: 100%;
+  width: 15em;
+  height: 15em;
+  margin-left: 1em;
+  border-radius: 15%;
+  border: 0.5em solid #CBA591;
 }
 
 .text_horizontal {
@@ -123,21 +134,11 @@ img {
   width: 300px;
   height: 40px;
   position: relative;
-  background: #690003;
+  background: #8f3639;
   color: #FFEFCB;
   font-size: 2.25rem;
 }
-.section-title:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-left: 20px solid white;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
-}
+
 .section-title:before {
   content: "";
   position: absolute;
@@ -145,8 +146,14 @@ img {
   bottom: 0;
   width: 0;
   height: 0;
-  border-left: 20px solid #690003;
+  border-left: 20px solid #8f3639;
   border-top: 20px solid transparent;
   border-bottom: 20px solid transparent;
 }
   
+footer p {
+  background-color: #8f3639;
+  width: 100%;
+  color: #FFEFCB;
+  font-size: 1em;
+}
