--- a/menu.css
+++ b/menu.css
@@ -49,7 +49,6 @@ body {
 
 p {
   font-size: 15px;
-  text-indent: 20px;
   color: hsl(23, 33%, 28%);
   padding-left: 5%;
   max-width:1300px;
@@ -70,10 +69,9 @@ h3 {
 
 h1 {
   text-align: center;
-  text-indent: 20px;
   font-size: 35px;
   color: #604230;
-  margin-left: 1em;
+
 }
 
 h2 {
@@ -254,3 +252,24 @@ footer {
   transform: skewY(var(--skew-angle));
 }
 
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background-color: #FFEFCB;
+  width: 1000px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  box-shadow: 0px 5px 9px 3px rgba(83, 7, 7, 0.63);
+}
+
+.menu p {
+  all: initial;
+  text-align: center;
+  font-size: 35px;
+  color: hsl(23, 33%, 28%);
+  max-width:1300px;
+  word-wrap:normal;
+
+}
