--- a/menu.css
+++ b/menu.css
@@ -227,9 +227,9 @@ footer {
 
 #menu_B_img {
   z-index: -3; 
-
   width: 40%;
   height: 40%;
+  position:relative;
 
 }
 
@@ -245,7 +245,7 @@ footer {
   isolation: isolate;
   margin-top: 200px;
   margin-left: 900;
-  width: 50%;
+  width: 40%;
 }
 
 .diagonal_B::after {
@@ -260,13 +260,13 @@ footer {
 .diagonal_C {
   z-index: -4; 
   --skew-angle: 7deg;
-  --background: linear-gradient( 100deg, #FFEFCB, #FFEFCB, #FFEFCB);
+  --background: linear-gradient( 100deg, #FFEFCB, #FFEFCB, #FFEFCB, #CBA591);
   position: absolute;
   isolation: isolate;
-  margin-top: 900px;
-  margin-right: -1000px;
-  margin-left: 1000px;
-  width: 50%;
+  margin-top: 500px;
+  margin-right: -1500px;
+  margin-left: 1200px;
+  width: 40%;
 }
 
 .diagonal_C::after {
@@ -277,15 +277,16 @@ footer {
   inset: 0;
   transform: skewY(var(--skew-angle));
 }
-
+/*add a gradient to the menu*/
 .menu {
   margin: 0 auto;
   background-color: #FFEFCB;
   width: 50%;
   padding-top: 50px;
   padding-bottom: 50px;
-  /*box-shadow: 0px 5px 9px 3px rgba(83, 7, 7, 0.63);*/
-  text-align:center
+  text-align:center;
+  --skew-angle: 7deg;
+  --background: linear-gradient( 100deg, #FFEFCB, #FFEFCB, #FFEFCB, #CBA591);
 }
 
 .menu p {
