--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ img {
   max-height: 100%;
   width: 15em;
   height: 15em;
-
+  border: 5px solid #604230;
 }
 
 .image_horizontal img {
@@ -185,7 +185,7 @@ footer {
   width: 50%;
   height: 50%;
   position: absolute;
-
+  clip-path: polygon(0 8%, 100% 0%, 100% 65%, 0 86%);
 }
 
 #gelato_B_element {
@@ -217,6 +217,7 @@ footer {
   margin-left: 50%;
   margin-right: 0%;
   margin-top: -130px;
+  
 }
 
 #process_img {
@@ -228,6 +229,7 @@ footer {
   width: 25%;
   height: 25%;
   position: relative;
+  
 }
 #process p {
   max-width:590px;
