--- a/about_us.css
+++ b/about_us.css
@@ -154,7 +154,7 @@
     position: relative;
     background: #8f3639;
     color: #FFEFCB;
-    font-size: 2.25rem;
+    font-size: 2rem;
   }
   
   .section-title:before {
@@ -193,9 +193,18 @@
   .box {
     background-color: #CBA591;
     display: flex;
+    flex-direction: column; /* Stacks image and text vertically */
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    padding-right: 50px; /* Adds some spacing */
+    text-align: center;
+  }
+  
+  .box img {
+    width: 40%; /* Adjust image size */
+    height: auto;
+    margin-bottom: 10px; /* Space between image and text */
   }
 
 
