--- a/index.css
+++ b/index.css
@@ -44,7 +44,6 @@ a:active {
 body {
   background-color: #FFEFCB;
   margin: 0;
-  /*background-image: url("gelato_B.jpg");*/
 
 }
 
@@ -78,22 +77,16 @@ h1 {
 }
 
 h2 {
-    text-indent: 20px;
-    color: #604230;
-    margin-left: 1em;
-}
-
-
-
-.site-title {
-  font-size: 3rem;
-  text-align: center;
+  text-indent: 20px;
+  color: #604230;
+  margin-left: 1em;
 }
 
 section {
   padding-block: 5rem;
 }
 
+/*diagonal streak*/
 .diagonal {
   z-index: 1; 
   --skew-angle: -5deg;
@@ -110,36 +103,6 @@ section {
   z-index: -1;
   inset: 0;
   transform: skewY(var(--skew-angle));
-}
-
-.image_text_container {
-  display: flex;
-  align-items: center;
-  justify-content: center
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  width: 15em;
-  height: 15em;
-  border: 5px solid #604230;
-}
-
-.image_horizontal img {
-  max-width: 100%;
-  max-height: 100%;
-  width: 15em;
-  height: 15em;
-  margin-left: 1em;
-  border-radius: 15%;
-  border: 0.5em solid #CBA591;
-}
-
-.text_horizontal {
-  font-size: 20px;
-  padding-left: 20px;
-  max-width:500px;
 }
 
 .section-title {
@@ -176,6 +139,7 @@ footer {
   width: 100%;
 }
 
+
 #gelato_B {
   z-index: -5; 
   margin-top: 0px;
@@ -188,6 +152,7 @@ footer {
   clip-path: polygon(0 8%, 100% 0%, 100% 65%, 0 86%);
 }
 
+/*cuts off part of gelato_B*/
 #gelato_B_element {
   --skew-angle: -5deg;
   --background: linear-gradient( 45deg, #FFEFCB, #FFEFCB,#FFEFCB);
@@ -234,11 +199,12 @@ footer {
 #process p {
   max-width:590px;
 }
-
+/*applies a shape to images, see notes for useful tool*/
+/*first use of this, will use this method going forward*/
 .box {
   clip-path: polygon(0 14%, 100% 19%, 100% 93%, 0 86%);
 }
-
+/*horizontal streak, idk why I named it this*/
 .diagonal_B {
   z-index: -4; 
   --skew-angle: 0deg;
