--- a/about_us.css
+++ b/about_us.css
@@ -124,6 +124,12 @@
     justify-content: center
   }
   
+  #logo{
+    width: 50%;
+    height: 50%;
+    border: none;
+  }
+  
   img {
     max-width: 100%;
     max-height: 100%;
